(refactor/feature) Finish screenshots/fund report business logic Add Exceptions and handle them; Add types; Create constants for paths;

--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,11 @@
       "email": "psknyazevich@gmail.com"
     }
   ],
+  "require-dev": {
+    "10up/wp_mock": "0.4.2",
+    "phpunit/phpunit": "8.5"
+  },
   "require": {
-    "phpunit/phpunit": "8.5",
     "ext-json": "*"
   }
 }
